syntax = "proto3";

package teleport.subca.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/subca/v1;subcav1";

// An X.509 distinguished name.
// Mimics Go's pkix.Name.
message DistinguishedName {
  // Names that compose the DN.
  repeated AttributeTypeAndValue names = 1;
}

// AttributeTypeAndValue is a distinguished name (oid,value) pair.
message AttributeTypeAndValue {
  // OID of the ATV.
  repeated int32 oid = 1;
  // Value of the ATV.
  //
  // Only string values are supported, similarly to Go's
  // pkix.AttributeTypeAndValue (see
  // https://cs.opensource.google/go/go/+/refs/tags/go1.26.0:src/crypto/x509/pkix/pkix.go;l=152).
  string value = 2;
}
