/*
 * Teleport
 * Copyright (C) 2023  Gravitational, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto3";

package teleport.lib.teleterm.v1;

option go_package = "github.com/gravitational/teleport/gen/proto/go/teleport/lib/teleterm/v1;teletermv1";

// AuthSettings contains the form of authentication the auth server supports.
message AuthSettings {
  // local_auth_enabled is a flag that enables local authentication
  bool local_auth_enabled = 1;

  reserved "second_factor";
  reserved 2; // second_factor

  reserved "preferred_mfa";
  reserved 3; // preferred_mfa

  // auth_providers contains a list of auth providers
  repeated AuthProvider auth_providers = 4;
  // has_message_of_the_day is a flag indicating that the cluster has MOTD
  // banner text that must be retrieved, displayed and acknowledged by
  // the user.
  bool has_message_of_the_day = 5;
  // auth_type is the authentication type e.g. "local", "github", "saml", "oidc"
  string auth_type = 6;
  // allow_passwordless is true if passwordless logins are allowed.
  bool allow_passwordless = 7;
  // local_connector_name is the name of the local connector.
  string local_connector_name = 8;
  // client_version_status describes the compatibility status of the client version when compared
  // against the version of the server.
  ClientVersionStatus client_version_status = 9;
  Versions versions = 10;
}

// AuthProvider describes a way of authentication that is supported by the server. Auth provider is
// referred to as "auth connector" on the backend.
message AuthProvider {
  // Type is the auth provider type (github|oidc|etc)
  string type = 1;
  // Name is the internal name of the connector.
  string name = 2;
  // Display is the display name for the connector.
  string display_name = 3;
}

// ClientVersionStatus describes the compatibility status of the client version when compared
// against the version of the server.
enum ClientVersionStatus {
  CLIENT_VERSION_STATUS_COMPAT_UNSPECIFIED = 0;
  // CLIENT_VERSION_STATUS_OK means that the client is on the same major version as the server or at
  // most one major version behind.
  // For example, the server is on v17.1.0 and the client is on v16.0.4.
  CLIENT_VERSION_STATUS_OK = 1;
  // CLIENT_VERSION_STATUS_TOO_OLD means that the client is at least two major versions behind the
  // server.
  // For example, the server is on v19.3.2 and the client is on v17.4.1.
  CLIENT_VERSION_STATUS_TOO_OLD = 2;
  // CLIENT_VERSION_STATUS_TOO_NEW means that the client is at least one major version ahead of the
  // server.
  // For example, the server is on v18.2.1 and the client is on v19.0.0.
  CLIENT_VERSION_STATUS_TOO_NEW = 3;
}

// Versions contains versions of different components that can be used to show the client
// incompatibility warning. This way Connect can show the warning before the cluster is added to the
// app.
message Versions {
  string min_client = 1;
  // client is the version of tsh. Included for convenience, in theory the Electron app knows this
  // without asking tsh.
  string client = 2;
  string server = 3;
}
